# ceda-status

./: .pre-commit-config.yaml  README.md  pyproject.toml  status.json  statuspage.schema.json  test_schema.json
.github/workflows/: check.yml  validate.yml
testing_ceda_status/: generate_schema.py  model.py  validate.py
tests/: test_dates.py
